--- a/recipes/Dalmakhani.html
+++ b/recipes/Dalmakhani.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dal Makhani</title>
+    <style>
+        img {
+            height: auto;
+            width: 500px;
+        }
+    </style>
 </head>
 
 <body>
