--- a/recipes/Poha.html
+++ b/recipes/Poha.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Poha</title>
+    <style>
+        img {
+            height: auto;
+            width: 300px;
+        }
+    </style>
 </head>
 
 <body>
